# mcapi

./: .gitmodules  LICENSE  README.md
.github/workflows/: build.yml  ccapi_cli_build.yml  ccapi_gui_build.yml  mcapi_cli_build.yml  mcapi_gui_build.yml
api/: api.hpp  ccapi_assets.cpp  ccapi_java.cpp  ccapi_process.cpp  mcapi_assets.cpp  mcapi_auth.cpp  mcapi_fabric.cpp  mcapi_http.cpp  mcapi_java.cpp  mcapi_process.cpp  mcapi_vanilla.cpp
api/archived/cli/: CMakeLists.txt  cli.cpp
cli/: CMakeLists.txt  cli.cpp
cli/gfx/: icon.rc
gui/: CMakeLists.txt  console.cpp  console.h  console.ui  gui.cpp  gui.h  gui.ui  main.cpp  resources.qrc
gui/gfx/: icon.rc
